--- a/mysite/accounts/templates/cooking.html
+++ b/mysite/accounts/templates/cooking.html
@@ -8,9 +8,9 @@
     <title>Cooking-sait</title>
 </head>
 <body>
-    <li class="{%block about_1%}{%endblock%}"><a href="/cooking/plov/1">Плов</a> </li>
-    <li class="{%block about_2%}{%endblock%}"><a href="/cooking/soup/1">Суп</a> </li>
-    <li class="{%block about_3%}{%endblock%}"><a href="/cooking/porridge/1">Каша</a> </li>
+    <li class="{%block about_1%}{%endblock%}"><a href="/plov/1">Плов</a> </li>
+    <li class="{%block about_2%}{%endblock%}"><a href="/soup/1">Суп</a> </li>
+    <li class="{%block about_3%}{%endblock%}"><a href="/porridge/1">Каша</a> </li>
 
 </body>
 </html>
