--- a/mysite/accounts/templates/login.html
+++ b/mysite/accounts/templates/login.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <h2>Login</h2>
+
+
+
     {% if error %}
         <p>{{ error }}</p>
     {% endif %}
@@ -16,5 +19,16 @@
         <input type="password" id="password" name="password" required><br>
         <button type="submit">Login</button>
     </form>
+    <hr>
+    <form method="POST" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+    </form>
+    <hr>
+    <form method="POST" action="{% url 'task_list' %}">
+        {% csrf_token %}
+        <button type="submit">To-Do List</button>
+    </form>
+    <hr>
 </body>
 </html>
