--- a/mysite/accounts/templates/task_list.html
+++ b/mysite/accounts/templates/task_list.html
@@ -6,10 +6,17 @@
 </head>
 <body>
     <div class="container mt-5">
-        <form method="POST" action="{% url 'register' %}">
+
+        <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
-            <button type="submit">Register</button>
+            <button type="submit">Login</button>
         </form>
+        <hr>
+        <form method="POST" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit">Logout</button>
+        </form>
+        <hr>
         <br>
         <h3>To-Do List</h3>
         <form method="POST" action="{% url 'add_task' %}">
