Django with Authorization #20 Добавлена страница обработки фотографии. Фильтр выбирает радио-кнопка. Не работает отбражение изображения на странице.

--- a/mysite/accounts/templates/img_sp.html
+++ b/mysite/accounts/templates/img_sp.html
@@ -7,14 +7,10 @@
 <body>
   <h1>Изображение обработанао и сохранено!</h1>
     <br><hr>
-    <img src="/processed_image.jpg" alt="Здесь должна быть картинка"/>
+
+  <p><img src="C:/Users/hot-z/django2/mysite/media/processed_image.jpg"></p>
+
     <hr>
 </body>
 </html>
 
-<style>
-img {
-  width: 100%;
-  height: auto;
-}
-</style>
