--- a/mysite/accounts/templates/img_sp.html
+++ b/mysite/accounts/templates/img_sp.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <h1>Изображение обработанао и сохранено!</h1>
-    <img src="{% static 'C:\Users\hot-z\django2\mysite\accounts\static\images\processed_image.jpg' %}" alt="Изображение1" ><br><br>
-    <img src="{% static 'C:/Users/hot-z/django2/mysite/accounts/static/images/processed_image.jpg' %}" alt="Изображение2" ><br><br>
-    <img src="{% static 'mysite/accounts/static/images/processed_image.jpg' %}" alt="Изображение3" ><br><br>
-    <img src="{% static 'mysite/accounts/static/images/processed_image.jpg' %}" alt="Изображение4" >
-
-
+    <img src="{% static '/images/processed_image.jpg' %}" alt="Изображение1" ><br><br>
+    <img src="{% static '/static/images/processed_image.jpg' %}" alt="неверный путь к фото" ><br><br>
+    <img src="{% static '/accounts/static/images/processed_image.jpg' %}" alt="неверный путь к фото" ><br><br>
+    <img src="{% static '/mysite/accounts/static/images/processed_image.jpg' %}" alt="неверный путь к фото" >
     <hr>
 </body>
 </html>
